# asr

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: build.yml  docs.yml
asr-derive/: Cargo.toml
asr-derive/src/: lib.rs  unity.rs
src/: deep_pointer.rs  future.rs  gba.rs  lib.rs  panic.rs  primitives.rs  runtime.rs  signature.rs  string.rs  sync.rs  time_util.rs  wasi_no_std.rs  watcher.rs
src/dotnet/: il2cpp.rs  il2cpp_2019.rs  il2cpp_2020.rs  il2cpp_2020_orig.rs  il2cpp_base.rs  mod.rs  mono.rs  scenemanager.rs
src/emulator/: gba.rs  mod.rs
src/emulator/gba/: emuhawk.rs  mednafen.rs  mgba.rs  mod.rs  nocashgba.rs  retroarch.rs  vba.rs
src/emulator/gcn/: dolphin.rs  mod.rs  retroarch.rs
src/emulator/genesis/: blastem.rs  fusion.rs  gens.rs  mod.rs  retroarch.rs  segaclassics.rs
src/emulator/ps1/: duckstation.rs  epsxe.rs  mednafen.rs  mod.rs  pcsx_redux.rs  psxfin.rs  retroarch.rs  xebra.rs
src/emulator/ps2/: mod.rs  pcsx2.rs  retroarch.rs
src/emulator/sms/: blastem.rs  fusion.rs  mednafen.rs  mod.rs  retroarch.rs
src/emulator/wii/: dolphin.rs  mod.rs  retroarch.rs
src/file_format/: elf.rs  macho.rs  mod.rs  pe.rs
src/future/: mod.rs  task.rs  time.rs
src/game_engine/: mod.rs
src/game_engine/godot/: mod.rs
src/game_engine/godot/core/: mod.rs
src/game_engine/godot/core/object/: mod.rs  object.rs  script_instance.rs  script_language.rs
src/game_engine/godot/core/os/: main_loop.rs
src/game_engine/godot/core/string/: mod.rs  string_name.rs  ustring.rs
src/game_engine/godot/core/templates/: cowdata.rs  hash_map.rs  hash_set.rs  hashfuncs.rs  list.rs  mod.rs  vector.rs
src/game_engine/godot/core/variant/: mod.rs  variant.rs
src/game_engine/godot/cpp/: mod.rs  ptr.rs  type_info.rs  vtable.rs
src/game_engine/godot/modules/: mod.rs
src/game_engine/godot/modules/gdscript/: gdscript.rs  mod.rs
src/game_engine/godot/modules/mono/: csharp_script.rs  mod.rs
src/game_engine/godot/scene/: mod.rs
src/game_engine/godot/scene/main/: canvas_item.rs  mod.rs  node.rs  scene_tree.rs  viewport.rs  window.rs
src/game_engine/godot/scene/three_d/: collision_object_3d.rs  mod.rs  node_3d.rs  physics_body_3d.rs
src/game_engine/godot/scene/two_d/: collision_object_2d.rs  mod.rs  node_2d.rs  physics_body_2d.rs
src/game_engine/unity/: il2cpp.rs  mod.rs  mono.rs  scene.rs
src/game_engine/unity/il2cpp/: assembly.rs  class.rs  field.rs  image.rs  mod.rs  offsets.rs  pointer.rs  version.rs
src/game_engine/unity/mono/: assembly.rs  class.rs  field.rs  image.rs  mod.rs  offsets.rs  pointer.rs  version.rs
src/game_engine/unity/scene_manager/: game_object.rs  game_objects.rs  mod.rs  offsets.rs  scene.rs  transform.rs
src/game_engine/unreal/: mod.rs
src/primitives/: address.rs  endian.rs  mod.rs
src/runtime/: memory_range.rs  mod.rs  process.rs  sys.rs  timer.rs  user_settings.rs
src/runtime/settings/: gui.rs  list.rs  map.rs  mod.rs  value.rs
