[package]
name = "asr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.2", default-features = false, optional = true }
asr-derive = { path = "asr-derive", optional = true }
bitflags = { version = "2.2.1", optional = true }
bytemuck = { version = "1.9.1", features = ["derive", "min_const_generics"] }
itoa = { version = "1.0.1", default-features = false, optional = true }
memchr = { version = "2.5.0", default-features = false, optional = true }
ryu = { version = "1.0.11", default-features = false, optional = true }
time = { version = "0.3.5", default-features = false }

[features]
integer-vars = ["itoa"]
float-vars = ["ryu"]
float-vars-small = ["float-vars", "ryu/small"]
flags = ["bitflags"]
strings = ["arrayvec"]
gba = []
signature = ["memchr"]
derive = ["asr-derive"]
