[package]
name = "asr-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.4.0"
proc-macro2 = "1.0.70"
quote = "1.0.18"
syn = { version = "2.0.41", features = ["full"] }

[lib]
proc-macro = true

[features]
unity = []
